// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`types-task returns all the types (including nested) found in the app and outputs to JSON 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/components/my-component.js",
          },
        },
      },
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/lib/ember-super-button/addon/components/my-component.js",
          },
        },
      },
    ],
    "message": Object {
      "text": "components",
    },
    "occurrenceCount": 2,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/controllers/my-controller.js",
          },
        },
      },
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/lib/ember-super-button/addon/controllers/my-controller.js",
          },
        },
      },
    ],
    "message": Object {
      "text": "controllers",
    },
    "occurrenceCount": 2,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/helpers/my-helper.js",
          },
        },
      },
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/lib/ember-super-button/addon/helpers/my-helper.js",
          },
        },
      },
    ],
    "message": Object {
      "text": "helpers",
    },
    "occurrenceCount": 2,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/initializers/my-initializer.js",
          },
        },
      },
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/lib/ember-super-button/addon/initializers/my-initializer.js",
          },
        },
      },
    ],
    "message": Object {
      "text": "initializers",
    },
    "occurrenceCount": 2,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/instance-initializers/my-helper.js",
          },
        },
      },
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/lib/ember-super-button/addon/instance-initializers/my-helper.js",
          },
        },
      },
    ],
    "message": Object {
      "text": "instance-initializers",
    },
    "occurrenceCount": 2,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/mixins/my-mixin.js",
          },
        },
      },
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/lib/ember-super-button/addon/mixins/my-mixin.js",
          },
        },
      },
    ],
    "message": Object {
      "text": "mixins",
    },
    "occurrenceCount": 2,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/models/my-model.js",
          },
        },
      },
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/lib/ember-super-button/addon/models/my-model.js",
          },
        },
      },
    ],
    "message": Object {
      "text": "models",
    },
    "occurrenceCount": 2,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/routes/my-route.js",
          },
        },
      },
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/lib/ember-super-button/addon/routes/my-route.js",
          },
        },
      },
    ],
    "message": Object {
      "text": "routes",
    },
    "occurrenceCount": 2,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/services/my-service.js",
          },
        },
      },
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/lib/ember-super-button/addon/services/my-service.js",
          },
        },
      },
    ],
    "message": Object {
      "text": "services",
    },
    "occurrenceCount": 2,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/templates/my-component.hbs",
          },
        },
      },
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/lib/ember-super-button/addon/templates/my-component.hbs",
          },
        },
      },
    ],
    "message": Object {
      "text": "templates",
    },
    "occurrenceCount": 2,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
]
`;

exports[`types-task returns all the types found in the app and outputs to JSON 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/components/my-component.js",
          },
        },
      },
    ],
    "message": Object {
      "text": "components",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/controllers/my-controller.js",
          },
        },
      },
    ],
    "message": Object {
      "text": "controllers",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/helpers/my-helper.js",
          },
        },
      },
    ],
    "message": Object {
      "text": "helpers",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/initializers/my-initializer.js",
          },
        },
      },
    ],
    "message": Object {
      "text": "initializers",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/instance-initializers/my-helper.js",
          },
        },
      },
    ],
    "message": Object {
      "text": "instance-initializers",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/mixins/my-mixin.js",
          },
        },
      },
    ],
    "message": Object {
      "text": "mixins",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/models/my-model.js",
          },
        },
      },
    ],
    "message": Object {
      "text": "models",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/routes/my-route.js",
          },
        },
      },
    ],
    "message": Object {
      "text": "routes",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/services/my-service.js",
          },
        },
      },
    ],
    "message": Object {
      "text": "services",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "/addon/templates/my-component.hbs",
          },
        },
      },
    ],
    "message": Object {
      "text": "templates",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "metrics",
      "group": "ember",
      "taskDisplayName": "Ember Types",
      "taskName": "ember-types",
    },
  },
]
`;
